# slt_tech_runtime

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/slt/camera/: camera.h
include/slt/input/: input_manager.h
include/slt/render/: model.h  program.h  render.h  render_target.h  resource_manager.h  skeleton.h  texture.h  uniform_block.h  uniform_buffer.h
include/slt/render/details/: backend_selection.h  resource.h  resource_cache.h  resource_ref.h
include/slt/render/details/opengl/: gl_includes.h  model.h  program.h  render_target.h  texture.h  uniform_block.h  uniform_buffer.h
include/slt/runtime/: runtime.h
include/slt/runtime/details/: backend.h
include/slt/runtime/details/glfw/: controller.h  glfw_runtime.h
src/slt/camera/: CMakeLists.txt  camera.cpp
src/slt/input/: CMakeLists.txt  input_manager.cpp  input_manager_test.cpp
src/slt/render/: CMakeLists.txt  resource_manager.cpp
src/slt/render/opengl/: CMakeLists.txt  model.cpp  program.cpp  render_target.cpp  texture.cpp  uniform_block.cpp  uniform_buffer.cpp
src/slt/runtime/: CMakeLists.txt  runtime.cpp
src/slt/runtime/glfw/: CMakeLists.txt  controller.cpp  glfw_runtime.cpp
tools/: CMakeLists.txt
tools/model_compiler/: CMakeLists.txt  fbx_memory_stream.h  main.cpp  mesh_builder.cpp  mesh_builder.h  skeleton_builder.cpp  skeleton_builder.h
tools/render_program_compiler/: CMakeLists.txt  main.cpp
